<resources>
    <string name="app_name">MySportTraining</string>

    <!--Login-->
    <string name="logo">Logo</string>
    <string name="loginButton">Inicar sesión</string>
    <string name="registerButton">Registrarse</string>

    <!--NavigationDrawer-->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--NavMenu-->
    <string name="nav_activity">Actividad</string>
    <string name="nav_training">Entrenamiento</string>
    <string name="nav_statistics">Estadísticas</string>
    <string name="nav_calendar">Calendario</string>
    <string name="nav_weightControl">Control de peso</string>
    <string name="nav_frieds">Amigos</string>
    <string name="nav_config">Configuración</string>
    <string name="nav_logout">Cerrar sesión</string>

    <!--ActionMenu-->
    <string name="action_settings">Configuración</string>
    <string name="action_help">Ayuda</string>
    <string name="action_about">Acerca de</string>

    <!--UserProfile-->
    <string name="usr_email">Correo electrónico</string>
    <string name="usr_password">Contraseña</string>
    <string name="usr_profileImage">Imagen de perfil</string>
    <string name="usr_username">username</string>
    <string name="usr_first_name">Nombre</string>
    <string name="usr_last_name">Apellidos</string>
    <string name="usr_score">SCORE</string>
    <string name="usr_height">Altura (cm)</string>
    <string name="usr_weight">Peso (kg)</string>
    <string name="usr_age">Edad (años)</string>
    <string name="usr_sex">Sexo</string>
    <string name="usr_physical_condition">Condición física</string>
    <string name="value">Valor</string>
    <string-array name="sex_array">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>
    <string-array name="weight_condition_array">
        <item>Inactividad física</item>
        <item>Normal</item>
        <item>Deportista</item>
    </string-array>


    <!--Friends-->
    <string name="friends_podium">Podium</string>
    <string name="friends_add_button">Agregar amigos</string>

    <!--WeightControl-->
    <string name="weight_control_icon">Control de peso</string>
    <string name="weight_control_add_button">Añadir</string>

    <!--Calendar-->
    <string name="calendar_widget">Calendario</string>

    <!--Training-->
    <string name="training_list">Lista de Entrenamientos</string>
    <string name="add_training_button">Agregar entrenamiento</string>

    <!--Statistics-->
    <string name="statistics_general">General</string>
    <string name="statistics_monthly">Mensual</string>

    <!--TodayTraining-->
    <string name="today_training_title">Entrenamiento para hoy</string>


    <!--CreateTraining-->
    <string name="create_training">Nombre del entrenamiento</string>
    <string name="create_training_list">Lista de ejercicios</string>
    <string name="create_training_add_button">Agregar ejercicio</string>
    <string name="create_training_finsh_button">Finalizar</string>

    <!--TrainingCategory-->
    <string name="training_category_sports">Deportes</string>
    <string name="training_category_cardio">Cardio</string>
    <string name="training_category_collective">Colectivas</string>
    <string name="training_category_gym_weights">Pesas libres</string>
    <string name="training_category_strength">Fuerza</string>
    <string name="training_category_elongation">Estiramientos</string>

    <!--DialogActivity-->
    <string name="dialog_when">Cuándo</string>
    <string name="dialog_duration">Hora</string>
    <string name="dialog_when_icon">Icono cuándo</string>
    <string name="dialog_duration_icon">Icono duración</string>
    <string name="no_date_set_string">0000-00-00</string>
    <string name="no_time_set_string">00:00:00</string>

    <!--DialogWeightControl-->
    <string name="dialog_weigth_icon">Icono peso</string>
    <string name="dialog_weight_date_icon">Icono fecha</string>
    <string name="dialog_weight">Peso (kg): </string>
    <string name="dialog_weight_date">Fecha: </string>
    <string name="dialog_weight_input">Peso</string>

    <!--SettingsActivity-->
    <string name="settings_switch">Sincronización de ejercicios con Calendario </string>
    <string name="shared_preferences_calendar">SharedPreferencesCalendar</string>

    <!--DialogHelpMessage-->
    <string name="help_message">
        <b>¿Qué es My Sport Training?</b>\nMy Sport Training es una aplicación creada para la asignatura
        de cuarto curso de Grado en Ingeniería en Software en la Escuela Politécnica de Cáceres. Consiste
        en un organizador de ejercicios físicos donde podrás programarte varios ejercicios en diferentes
        entrenamientos.\n\n<b>Resumen</b>\nMuestra un resumen del entrenamiento programado para el día
        de hoy.\n\n<b>Entrenamiento</b>\nNos permite organizar nuestros propio entrenamiento. Podemos
        crear un nuevo entrenamiento pulsando sobre el botón y ver los detalles de cada uno si pulsamos sobre
        cada entrenamiento, o incluso borrarlo. Seleccionamos de una lista el tipo de ejercicio a realizar
        y lo agregamos a nuestra lista, así como la fecha y la hora de este.\n\n<b>Estadísticas</b>\nEstadísticas
        tanto generales como mensuales de todos los ejercicios programados a realizar. Se organizan en la fila
        superior una fecha en la que se vayan a realizar ejercicios y en la fila lateral la puntuación total
        de ese día.\n\n<b>Calendario</b>\nMuestra en un calendario todos los días que haya ejercicios a
        realizar, mostrando en pantalla todos ellos al pulsar sobre determinado día. En ajustes, si pulsamos
        la opción de sincronizar calendario, todos los ejercicios que agremegemos, además de aparecer en este
        calendario, aparecerán en el calendario del sistema.\n\n<b>Control de peso</b>\nPuedes llevar un control
        de tu propio peso por días. Además, se actualizará en tu perfil de usuario.\n\n<b>Amigos</b>\nPuedes
        agregar a otros usuarios registrados en la aplicación a través de su dirección de correo electrónico
        y comparar las puntuaciones entre unos y otros. El mejor tendrá el primer puesto
        del podium.\n\n<b>Perfil de usuario</b>\nAquí podrás ver tus datos de usaurio y cambiar tu foto de
        perfil pulsando sobre la imagen de perfil.\n
    </string>

    <!--DialogAboutMessage-->
    <string name="about_message">My Sport Training Application\nVersion 1.0\nArquitecturas Software para Entornos Empresariales\nAutor: Jose Carlos Escudero Calamonte</string>
</resources>
