<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="asee.giiis.unex.es.mysporttraining.TrainingNewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/create_training_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/create_training_list"
            android:textSize="26sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_exercises_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/create_training_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_training_add_button" />

        <Button
            android:id="@+id/create_training_finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_training_finsh_button" />


    </LinearLayout>
</ScrollView>