<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="asee.giiis.unex.es.mysporttraining.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/reg_usr_profile_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:layout_marginStart="5dp"
                android:src="@android:drawable/sym_def_app_icon"
                app:civ_border_color="@color/colorPrimaryDark"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/reg_input_layout_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/reg_usr_username"
                        android:layout_width="wrap_content"
                        android:ems="9"
                        android:layout_height="wrap_content"
                        android:hint="@string/usr_username" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/reg_input_layout_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/reg_usr_first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="9"
                        android:hint="@string/usr_first_name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/reg_input_layout_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/reg_usr_last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="9"
                        android:hint="@string/usr_last_name" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/reg_usr_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="11"
                    android:hint="@string/usr_email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/reg_usr_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="11"
                    android:hint="@string/usr_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_input_layout_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/reg_usr_height"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="11"
                    android:hint="@string/usr_height"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_input_layout_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/reg_usr_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="11"
                    android:hint="@string/usr_weight"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_input_layout_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/reg_usr_age"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="11"
                    android:hint="@string/usr_age"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_input_layout_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/reg_usr_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="11"
                    android:inputType="text"
                    android:hint="@string/usr_sex" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_input_layout_physical_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/reg_usr_physical_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="11"
                    android:hint="@string/usr_physical_condition"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/reg_register_button"
            android:text="@string/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>

